--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -133,6 +133,18 @@
   box-shadow: 0 0 0 1px #0A76FD,0px 4px 6px 0px #1e618f33,0px 12px 24px -10px #1e618f4d;
 }
 
+.workshop-card-disabled {
+  box-shadow: 0 0 0 1px #656a7626,0px 2px 3px 0px #656a761a,0px 8px 16px -10px #656a7633;
+  padding: 16px;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  border-radius: 6px;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  position: relative;
+}
+
 .card-link-anchor{
   position: absolute;
   top: 0;
@@ -190,8 +202,8 @@ a:hover {
 .homecontent {
   padding-top: 24px;
   padding-bottom: 24px;
-  margin-left: 80px;
-  margin-right: 80px;
+  margin-left: 40px;
+  margin-right: 40px;
   display: grid;
   grid-template-columns: repeat(12,1fr);
 }
@@ -331,7 +343,7 @@ table th, table td {
 }
 
 .demoJourneyBody {
-      grid-column-gap: 3.5rem;
+    grid-column-gap: 3.5rem;
     grid-row-gap: 3.5rem;
     flex-flow: column;
     justify-content: flex-start;
@@ -415,4 +427,12 @@ table th, table td {
 
 strong {
   color: #000000;
+}
+
+.courses-grid-list {
+  display: grid;
+  list-style: none;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  padding-left: 0px;
+  gap: 24px;
 }
